codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__parallel_context_label_preserves_status_line.snap
---
source: tui/src/chatwidget/tests/parallel_tests.rs
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"› Ask ASM to do anything                                                        "
"                                                                                "
"  sol56         Parallel from main thread · ctrl+/ to switch · ctrl+c to close  "
