codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__parallel_starting.snap
---
source: tui/src/chatwidget/tests/parallel_tests.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"• Working (0s • esc to interrupt)                                               "
"                                                                                "
"                                                                                "
"› Ask ASM to do anything                                                        "
"                                                                                "
"  sol56 def·/tmp/project                                  Parallel starting...  "
