codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__permission_discovery_remote.snap
---
source: tui/src/chatwidget/tests/permissions.rs
expression: "render_bottom_popup(&chat, 110)"
---
  Update Model Permissions


› 1. Ask for approval (current)  Read and edit workspace files and run commands, with approval required for
                                 internet access or edits outside the workspace
     Approve for me (disabled)   Only ask for actions detected as potentially unsafe (disabled: Disabled by
                                 requirements)
     Full Access (disabled)      Use with caution: ASM can edit files outside this workspace and access the
                                 internet without approval (disabled: Disabled by requirements)
     Read Only (disabled)        Read workspace files, with approval required for edits or internet access
                                 (disabled: Disabled by requirements)
  2. server-only                 Description from the connected server.

  enter select · esc back
