codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__plan_draft_footer.snap
---
source: tui/src/chatwidget/tests/plan_mode.rs
expression: "normalize_snapshot_paths(render_bottom_popup(&chat, 80))"
---
› make a plan

  5 def·/tmp/project
